# leptos-next-metadata

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_GENERATION.md  Cargo.toml  LICENSE-APACHE  LICENSE-HEADER  Makefile  NEXTJS_COMPARISON.md  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  SETUP.md  TESTING_COVERAGE_ASSESSMENT.md  TEST_SUMMARY.md  analytics_events.jsonl  claude.md  deny.toml  flake.nix  package.json  playwright.config.ts  pnpm-lock.yaml  rustfmt.toml  shell.nix  tsconfig.json  wasm-pack.toml  worker.js
.cargo/: config.toml
.github/workflows/: e2e-tests.yml  file-size-check.yml  nightly.yml  pages.yml  test.yml
benches/: metadata_bench.rs
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NAVIGATION.md  README.md  index.md
docs/analysis/: CRITICAL_ISSUES_ANALYSIS.md
docs/api/: core.md  macros.md  openapi.yaml
docs/architecture/: SYSTEM_OVERVIEW.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/getting-started/: installation.md  project-setup.md  quick-start.md
docs/book/src/guides/: og-images.md  static-metadata.md
docs/changelog/: RELEASE_NOTES.md
docs/community/: SECURITY.md
docs/community/changelog/: CHANGELOG.md
docs/demo/: README.md  about.html  analytics.html  blog.html  index.html  og-test.html  performance.html  products.html
docs/design/: AB_TESTING_DESIGN.md  ADVANCED_CANVAS_DESIGN.md  ANALYTICS_INTEGRATION_DESIGN.md  API_CONTRACTS_COMPONENT.md  METADATA_CORE_COMPONENT.md  OG_IMAGE_COMPONENT.md  PLUGIN_SYSTEM_DESIGN.md  V1_5_0_ROADMAP_DESIGN.md  WASM_API_DESIGN.md  WASM_ARCHITECTURE_DESIGN.md  WEB_WORKERS_DESIGN.md
docs/development/: design.md  documentation_plan.md  implementation_plan.md  testing_strategy.md
docs/development/rfcs/: 0001-api-design.md  0002-performance-targets.md
docs/examples/basic/: README.md
docs/getting-started/: quick-start.md
docs/guides/: PRODUCTION_ROADMAP.md  components.md  getting-started.md  migration-guide.md  performance-guide.md  troubleshooting.md
docs/remediation/: API_CONTRACTS_COMPLETION_SUMMARY.md  COMPLETION_SUMMARY.md  FILE_REFACTORING_PLAN.md  P0_CRITICAL_FIXES.md  P1_QUALITY_IMPROVEMENTS.md  WASM_SUPPORT_INVESTIGATION.md  WASM_SUPPORT_REMEDIATION_PLAN.md
docs/rfcs/: 0001-api-design.md  0002-performance-targets.md
examples/: analytics_example.rs  competitive_analysis_demo.rs  competitive_analysis_simple.rs  dynamic_metadata.rs  theme_example.rs  web_workers_example.rs
examples/basic/: Cargo.toml  main.rs
examples/minimal/: Cargo.toml  main.rs
examples/server_demo/: Cargo.toml  README.md
examples/server_demo/src/: main.rs
examples/test_server/: Cargo.toml  main.rs
examples/test_server/static/: index.html
examples/wasm_demo/: Cargo.toml  README.md  build.sh  index.html  package.json
examples/wasm_demo/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
reports/: comprehensive-metadata-report.html  comprehensive-metadata-report.json  comprehensive-metadata-report.md
scripts/: build-wasm.sh  check-file-sizes.sh
src/: canvas_types.rs  error.rs  lib.rs  lib_full.rs  lib_minimal.rs
src/analytics/: handlers.rs  integration.rs  mod.rs  wasm.rs
src/api/: contracts.rs  mod.rs
src/api/contracts/: middleware.rs  mod.rs  rules.rs  tests.rs  types.rs  validator.rs
src/body/: mod.rs
src/competitive_analysis/: benchmark.rs  demo_creator.rs  mod.rs  service.rs  types.rs
src/components/: mod.rs
src/conventions/: config.rs  mime_types.rs  mod.rs  mod_new.rs  mod_old.rs  patterns.rs  scanner.rs  types.rs
src/enhanced_title/: mod.rs
src/hashed_stylesheet/: mod.rs
src/html/: mod.rs
src/json_ld/: mod.rs
src/macros/: README.md  mod.rs  tests.rs
src/meta_tags/: mod.rs
src/metadata/: builder.rs  context.rs  context_tests.rs  core_types.rs  display.rs  merge.rs  mod.rs  serde_impl.rs  types.rs  validation.rs
src/metadata/tests/: builder_test.rs  integration_test.rs  types_test.rs
src/metadata/types/: browser_types.rs  core_types.rs  open_graph_types.rs  twitter_types.rs
src/metadata/validation/: core.rs  mod.rs  rules.rs  types.rs  utils.rs
src/og_image/: cache.rs  encoder.rs  generator.rs  metrics.rs  mod.rs  mod_new.rs  mod_old.rs  template.rs  types.rs
src/themes/: builder.rs  mod.rs  predefined.rs
src/utils/: cache.rs  errors.rs  mod.rs  string.rs  url.rs  validation.rs
src/wasm/: browser_api.rs  canvas_og.rs  context.rs  error_handler.rs  feature_detection.rs  mod.rs  performance.rs  security.rs  storage.rs  worker.rs  worker_manager.rs
tests/: advanced_canvas_tests.rs  analytics_tests.rs  api_contracts_integration_test.rs.disabled  golden_images_test.rs.disabled  theme_tests.rs  wasm_tests.rs  web_workers_tests.rs
tests/benchmarks/: performance_regression_test.rs
tests/e2e/: README.md  browser_metadata_test.rs  component_interactions.spec.ts  component_performance.spec.ts  component_rendering.spec.ts  cross_browser_metadata.spec.ts  generate_comprehensive_report.ts  global-setup.ts  global-teardown.ts  metadata_validation.spec.ts  real_metadata_validation.spec.ts  run_tests_with_server.sh  simple_metadata_test.spec.ts  tdd_basic_infrastructure.spec.ts  tdd_edge_cases.spec.ts  tdd_error_conditions.spec.ts  tdd_performance_stress.spec.ts  tdd_report_generator.spec.ts  visual_regression_test.rs
tests/fixtures/metadata/: example_metadata.json
tests/golden/: .gitkeep
tests/helpers/: mod.rs
tests/integration/: component_interactions_test.rs  file_conventions_test.rs  metadata_context_test.rs  ssr_test.rs
tests/property/: metadata_props.rs
tests/unit/macros/: macro_compilation_tests.rs  macro_error_handling_tests.rs  macro_integration_tests.rs  macro_performance_tests.rs  mod.rs
tests/unit/metadata/: merge_test.rs  types_test.rs  validation_test.rs
tests/unit/og_image/: generator_test.rs  templates_test.rs
