[package]
name = "leptos-next-metadata-server-demo"
version = "0.1.0"
edition = "2021"
authors = ["Leptos Next Metadata Team"]
description = "Server-side demo for leptos-next-metadata"
license = "MIT OR Apache-2.0"

# [workspace] - removed to avoid multiple workspace roots

[dependencies]
# Core leptos-next-metadata with server features
leptos-next-metadata = { path = "../../", features = ["ssr", "og-images", "file-conventions", "json-ld", "caching"] }

# Leptos framework
leptos = { version = "0.8.7", features = ["ssr"] }
leptos_router = { version = "0.8.7", features = ["ssr"] }

# Server dependencies
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
futures = "0.3"

[features]
default = ["ssr"]
ssr = []
