[package]
name = "leptos-next-metadata-wasm-demo"
version = "0.1.0"
edition = "2021"
authors = ["Leptos Next Metadata Team"]
description = "WASM demo for leptos-next-metadata"
license = "MIT OR Apache-2.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core leptos-next-metadata with WASM features
leptos-next-metadata = { path = "../../", features = ["wasm", "wasm-advanced"] }

# Leptos framework for WASM
leptos = { version = "0.8.7", features = ["csr"] }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlMetaElement",
    "HtmlLinkElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "Storage",
    "Navigator",
    "Performance",
    "Worker",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Error handling
console_error_panic_hook = "0.1"

[features]
default = ["wasm"]
wasm = []
wasm-advanced = ["wasm", "canvas-og", "performance-monitoring"]
canvas-og = []
performance-monitoring = []